<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_con"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_tools" />
    </group>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/menu_share" />
        </menu>
    </item>
</menu>
