<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.prc.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.prc.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/bottom_home"
        android:name="com.example.prc.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/bottom_consultation"
        android:name="com.example.prc.dashboard.DashboardFragment"
        android:label="@string/title_consultation"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/bottom_courses"
        android:name="com.example.prc.notifications1.NotificationsFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/bottom_contact_us"
        android:name="com.example.prc.slideshow.SlideshowFragment"
        android:label="@string/title_contact_us"
        tools:layout="@layout/fragment_slideshow" />

</navigation>