<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_under"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="297dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/back_structure"
            android:text="@string/title_detail_hand_Reading"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="#612623"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/title_info"
            android:gravity="center"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/title_dhreading1">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/title_dhreading2">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/title_dhreading3">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_dhreading4"
            android:textStyle="bold|italic"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/back_structure"
                android:backgroundTint="#612623"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="70dp"
                android:text="@string/title_back"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/continu"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/back_structure"
                android:backgroundTint="#612623"
                android:text="@string/title_continue"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>