<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_under"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="51dp"
            android:background="@drawable/back_structure"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/title_fill_details"
            android:textAlignment="center"
            android:textColor="#612623"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                app:srcCompat="@drawable/profile_image"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#612623"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/title_personal_info"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/textPersonName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:background="@drawable/back_struc"
                android:hint="@string/title_name"
                android:textColor="#612623"
                android:inputType="textPersonName"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="#612623"
                android:hint="@string/title_email"
                android:textAlignment="center"
                android:background="@drawable/back_struc"
                android:inputType="textEmailAddress"
                android:textSize="16sp"/>
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textPhone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:hint="@string/title_mob_no"
                android:textColor="#612623"
                android:background="@drawable/back_struc"
                android:inputType="phone"
                android:textSize="16sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:hint="@string/title_DOB"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="#612623"
                android:textColor="#612623"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:hint="@string/title_timeB"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="#612623"
                android:textColor="#612623"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="165dp"
                android:layout_height="37dp"
                android:textAlignment="center"
                android:layout_marginLeft="100dp"
                android:background="@drawable/back_struc"
                android:entries="@array/Genderarray"
                android:prompt="@string/gend"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/textBirthplace"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/back_struc"
                android:paddingLeft="30sp"
                android:textAlignment="center"
                android:textColor="#612623"
                android:inputType="textPersonName"
                android:hint="@string/title_birthplace"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textCountry"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="#612623"
                android:textAlignment="center"
                android:background="@drawable/back_struc"
                android:inputType="textPersonName"
                android:hint="@string/title_state"
                android:textSize="16sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_marriage"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/back_struc"
                android:entries="@array/Maritalarray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:prompt="@string/m_s"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/datemarri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title_marridate"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="#612623"
                android:textColor="#612623"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#612623"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/title_i_am"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/r1"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:background="@drawable/back_struc"
                    android:text="@string/title_working"
                    android:textColor="#612623"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:textSize="14dp"
                    android:onClick="checkButton"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/r2"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:background="@drawable/back_struc"
                    android:text="@string/title_stud"
                    android:textColor="#612623"
                    android:textSize="14dp"
                    android:onClick="checkButton"/>

            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/back_struc"
                android:hint="@string/title_ifany"
                android:textAlignment="center"
                android:textSize="14dp"
                android:id="@+id/textSpecify"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnback"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/back_struc"
                android:backgroundTint="#612623"
                android:text="@string/title_back"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="18dp" />


            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/back_struc"
                android:backgroundTint="#612623"
                android:text="@string/tilte_submit"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>